<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/questionActivityAd">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/topicTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_margin"
                android:text="@string/question_topic"
                android:textSize="@dimen/text_size"
                android:textIsSelectable="true"
                android:textColor="@color/light_grey"/>
            <TextView
                android:id="@+id/questionLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/topicTextView"
                android:text="@string/question_label"
                android:textColor="@color/white"
                android:paddingStart="@dimen/medium_margin"
                android:paddingEnd="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/questionLabelTextView"
                android:text="@string/default_text"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:paddingStart="@dimen/medium_margin"
                android:paddingEnd="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                />
            <EditText
                android:id="@+id/answerEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_width"
                android:hint="@string/answer_hint"
                android:textColorHint="@color/light_grey"
                android:textColor="@color/black"
                android:background="@drawable/rounded_button_white"
                android:textSize="@dimen/text_size"
                app:layout_constraintTop_toBottomOf="@id/questionTextView"
                app:layout_constraintBottom_toTopOf="@id/submitButton"
                android:paddingStart="@dimen/medium_margin"
                android:paddingEnd="@dimen/medium_margin"
                android:paddingTop="@dimen/small_margin"
                android:paddingBottom="@dimen/small_margin"
                android:gravity="top"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:maxLines="@integer/max_lines"
                />
            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@drawable/rounded_button_primary"
                android:text="@string/submit_button"
                android:textAllCaps="false"
                android:textSize="@dimen/large_text_size"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/questionActivityAd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/less_medium_width"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/logo"
        android:background="@color/light_grey"
        />
</android.support.constraint.ConstraintLayout>